--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "MoMoCapture",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Augusto Dias",
+  "homepage": "https://github.com/gutosantos82/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,20 +22,26 @@
     "@ionic-native/background-mode": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.16.0",
+    "@ionic-native/native-storage": "^5.17.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "angular2-uuid": "^1.1.1",
     "cordova-android": "7.1.4",
     "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.2.2",
     "rxjs": "~6.5.1",
+    "stream": "0.0.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -65,7 +71,7 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project",
+  "description": "A mobile app to capture motion and movement",
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
@@ -77,7 +83,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-background-mode": {}
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "android"
