--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/background-mode": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.22.0",
     "@ionic-native/geolocation": "^5.16.0",
+    "@ionic-native/http": "^5.22.0",
     "@ionic-native/native-storage": "^5.17.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "angular2-uuid": "^1.1.1",
     "cordova-android": "7.1.4",
+    "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
@@ -47,7 +51,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.801.2",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
@@ -84,7 +88,10 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-geolocation": {},
       "cordova-plugin-background-mode": {},
-      "cordova-plugin-nativestorage": {}
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-advanced-http": {
+        "OKHTTP_VERSION": "3.10.0"
+      }
     },
     "platforms": [
       "android"
