--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MoMoCapture",
+  "name": "MusicLab",
   "version": "0.0.1",
   "author": "Augusto Dias",
   "homepage": "https://github.com/gutosantos82/",
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/background-mode": "^5.16.0",
+    "@ionic-native/background-mode": "^5.23.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.22.0",
     "@ionic-native/geolocation": "^5.16.0",
@@ -29,9 +29,9 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "angular2-uuid": "^1.1.1",
-    "cordova-android": "7.1.4",
+    "cordova-android": "^8.0.0",
     "cordova-plugin-advanced-http": "^2.4.1",
-    "cordova-plugin-background-mode": "^0.7.3",
+    "cordova-plugin-background-mode": "git+https://bitbucket.org/TheBosZ/cordova-plugin-run-in-background.git",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
@@ -87,11 +87,11 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-background-mode": {},
       "cordova-plugin-nativestorage": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
-      }
+      },
+      "cordova-plugin-background-mode": {}
     },
     "platforms": [
       "android"
